<resources>
    <string name="app_name">TestPI</string>
    <string name="TEMPERATURA">TEMPERATURA</string>
    <string name="LONGITUD">LONGITUD</string>
    <string name="PESO">PESO</string>
    <string name="DIVISA">DIVISA</string>
    <string name="XConverter">X-Converter</string>
    <string name="AplicacionesMóvilesI">Aplicaciones Móviles I</string>
    <string name="CESDE">CESDE</string>
    <string name="T2023">2023</string>
    <string name="Calcular">Calcular</string>


    <string-array name="Temperatura">
        <item>Celsius->Fahrenheit</item>
        <item>Fahrenheit->Celsius</item>
        <item>Kelvin->Celsius</item>
        <item>Kelvin->Fahrenheit</item>
        <item>Fahrenheit->Kelvin</item>
        <item>Celsius->Kelvin</item>
    </string-array>

    <string-array name="Peso">
        <item>Kilogramos->Libras</item>
        <item>Libras->Kilogramos</item>
        <item>Gramos->Libras</item>
        <item>Libras->Gramos</item>
        <item>Kilogramos->Gramos</item>
        <item>Gramos->Kilogramos</item>
        <item>Toneladas->Kilogramos</item>
        <item>Kilogramos->Toneladas</item>
        <item>Libras->Onzas</item>
        <item>Onzas->Libras</item>
        <item>Gramos->Onzas</item>
        <item>Onzas->Gramos</item>
        <item>Toneladas->Libras</item>
        <item>Libras->Toneladas</item>
        <item>Toneladas->Gramos</item>
        <item>Gramos->Toneladas</item>
        <item>Toneladas->Miligramos</item>
        <item>Miligramos->Toneladas</item>
        <item>Miligramos->Kilogramos</item>
        <item>Kilogramos->Miligramos</item>


    </string-array>

    <string-array name="Longitud">
        <item>Metros->Pies</item>
        <item>Pies->Metros</item>
        <item>Kilometros->Millas</item>
        <item>Millas->Kilometros</item>

    </string-array>

    <string-array name="Divisa">
        <item>Dolar->Euro</item>
        <item>Euro->Dolar</item>
        <item>Dolar->Peso colombiano</item>
        <item>Peso colombiano->Dolar</item>
        <item>Peso colombiano->Euro</item>
        <item>Euro->Peso colombiano</item>

    </string-array>


</resources>