<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo4"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/XConverter"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="217dp"
        app:srcCompat="@mipmap/logoxc"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <Button
        android:id="@+id/btnCalcularTemperatura"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:backgroundTint="#29B6F6"
        android:text="@string/TEMPERATURA"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#283593"
        app:icon="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/btncalcularLongitud"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:backgroundTint="#29B6F6"
        android:text="@string/LONGITUD"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#283593"
        app:icon="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/btnCalcularPeso"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:backgroundTint="#29B6F6"
        android:text="@string/PESO"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#283593"
        app:icon="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/btncalcularDivisa"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:backgroundTint="#29B6F6"
        android:text="@string/DIVISA"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#283593"
        app:icon="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/resultadoTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/AplicacionesMóvilesI"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CESDE"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/T2023"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/yeraldin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Yeraldin Carvajal"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/alex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Alexander velasquez"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/jhoan"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Jhoan Andres"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="390dp"
        android:layout_height="30dp"
        android:height="40dp"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:text="Brahian Ruiz"
        android:textColor="@color/white" />

</LinearLayout>